test/transparentproxy/install/testdata/rhel-8-redirect-all-dns-traffic.iptables.golden
*raw
:PREROUTING ACCEPT
:OUTPUT ACCEPT
-A PREROUTING -p udp -m comment --comment "kuma/mesh/tproxy/assign connection tracking zone 1 to all DNS responses" -m udp --sport 53 -j CT --zone 1
-A OUTPUT -p udp -m comment --comment "kuma/mesh/tproxy/assign connection tracking zone 1 to DNS traffic from the kuma-dp user (UID 5678)" -m udp --dport 53 -m owner --uid-owner 5678 -j CT --zone 1
-A OUTPUT -p udp -m comment --comment "kuma/mesh/tproxy/assign connection tracking zone 2 to DNS responses from the kuma-dp DNS proxy" -m udp --sport 15053 -m owner --uid-owner 5678 -j CT --zone 2
-A OUTPUT -p udp -m comment --comment "kuma/mesh/tproxy/assign connection tracking zone 2 to all DNS requests" -m udp --dport 53 -j CT --zone 2
COMMIT
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:POSTROUTING ACCEPT
:OUTPUT ACCEPT
:KUMA_MESH_INBOUND -
:KUMA_MESH_OUTBOUND -
:KUMA_MESH_INBOUND_REDIRECT -
:KUMA_MESH_OUTBOUND_REDIRECT -
-A PREROUTING -p tcp -m comment --comment "kuma/mesh/tproxy/redirect inbound TCP traffic to our custom chain for processing" -j KUMA_MESH_INBOUND
-A OUTPUT -p udp -m comment --comment "kuma/mesh/tproxy/return early for DNS traffic from kuma-dp" -m udp --dport 53 -m owner --uid-owner 5678 -j RETURN
-A OUTPUT -p udp -m comment --comment "kuma/mesh/tproxy/redirect all DNS requests to the kuma-dp DNS proxy (listening on port 15053)" -m udp --dport 53 -j REDIRECT --to-ports 15053
-A OUTPUT -p tcp -m comment --comment "kuma/mesh/tproxy/redirect outbound TCP traffic to our custom chain for processing" -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p tcp -m comment --comment "kuma/mesh/tproxy/redirect all inbound traffic to the custom chain for processing" -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -s 127.0.0.6/32 -o ifPlaceholder -m comment --comment "kuma/mesh/tproxy/prevent traffic loops by ensuring traffic from the sidecar proxy (using 127.0.0.6/32) to loopback interface is not redirected again" -j RETURN
-A KUMA_MESH_OUTBOUND ! -d 127.0.0.1/32 -o ifPlaceholder -p tcp -m comment --comment "kuma/mesh/tproxy/redirect outbound TCP traffic (except to DNS port 53) destined for loopback interface, but not targeting address 127.0.0.1/32, and owned by UID 5678 (kuma-dp user) to KUMA_MESH_INBOUND_REDIRECT chain for proper handling" -m tcp ! --dport 53 -m owner --uid-owner 5678 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -o ifPlaceholder -p tcp -m comment --comment "kuma/mesh/tproxy/return outbound TCP traffic (except to DNS port 53) destined for loopback interface, owned by any UID other than 5678 (kuma-dp user)" -m tcp ! --dport 53 -m owner ! --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -m comment --comment "kuma/mesh/tproxy/return outbound traffic owned by UID 5678 (kuma-dp user)" -m owner --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -p tcp -m comment --comment "kuma/mesh/tproxy/redirect all DNS requests sent via TCP to kuma-dp DNS proxy (listening on port 15053)" -m tcp --dport 53 -j REDIRECT --to-ports 15053
-A KUMA_MESH_OUTBOUND -d 127.0.0.1/32 -m comment --comment "kuma/mesh/tproxy/return traffic destined for localhost (127.0.0.1/32) to avoid redirection" -j RETURN
-A KUMA_MESH_OUTBOUND -m comment --comment "kuma/mesh/tproxy/redirect all other outbound traffic to our custom chain for further processing" -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p tcp -m comment --comment "kuma/mesh/tproxy/redirect TCP traffic to envoy (port 15006)" -j REDIRECT --to-ports 15006
-A KUMA_MESH_OUTBOUND_REDIRECT -p tcp -m comment --comment "kuma/mesh/tproxy/redirect TCP traffic to envoy (port 15001)" -j REDIRECT --to-ports 15001
COMMIT
